# amazonka-reproduce

./: Readme.md  flake.nix  template.cabal
src/: Template.hs
